--- a/app/views/tasks/create.html.erb
+++ b/app/views/tasks/create.html.erb
@@ -1,2 +1,5 @@
-<h1>Tasks#create</h1>
-<p>Find me in app/views/tasks/create.html.erb</p>
+<h1>Task Created</h1>
+
+<p>Your task has been created!</p>
+
+<%= link_to 'Back to Task List', tasks_path %>
