--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Tasks#show</h1>
-<p>Find me in app/views/tasks/show.html.erb</p>
+<h1><%= @task.title %></h1>
+
+<p><strong>Details:</strong> <%= @task.details %></p>
+<p><strong>Completed:</strong> <%= @task.completed ? 'Yes' : 'No' %></p>
+
+<%= link_to 'Edit', edit_task_path(@task) %> |
+<%= link_to 'Back to Task List', tasks_path %>
