--- a/app/views/tasks/update.html.erb
+++ b/app/views/tasks/update.html.erb
@@ -1,2 +1,5 @@
-<h1>Tasks#update</h1>
-<p>Find me in app/views/tasks/update.html.erb</p>
+<h1>Task Updated</h1>
+
+<p>Your task has been updated!</p>
+
+<%= link_to 'Back to Task List', tasks_path %>
