--- a/app/views/tasks/destroy.html.erb
+++ b/app/views/tasks/destroy.html.erb
@@ -1,2 +1,6 @@
-<h1>Tasks#destroy</h1>
-<p>Find me in app/views/tasks/destroy.html.erb</p>
+<h1>Confirm Task Deletion</h1>
+
+<p>Are you sure you want to delete this task?</p>
+
+<%= link_to 'Yes, Delete', destroy_task_path(@task), method: :delete %>
+<%= link_to 'Cancel', tasks_path %>
